<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>roart</groupId>
  <artifactId>stockstat-parent</artifactId>
  <packaging>pom</packaging>
  <version>0.6-SNAPSHOT</version>
  <name>Stock Statistics Parent</name>
  <modules>
    <module>common</module>
    <module>eureka</module>
    <module>iclij</module>
    <module>input</module>
    <module>main</module>
    <module>testdata</module>
    <!--module>web</module-->
    <module>weba</module>
    <module>webr</module>
    <module>distribution</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${mavencompiler.version}</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
            <encoding>UTF-8</encoding>
          </configuration>
	</plugin>
	 <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
		<configuration>
		  <argLine>
		    --add-opens java.base/java.lang=spring.core
		    --add-reads model=ALL-UNNAMED
		    --add-reads springdata=ALL-UNNAMED
		    --add-opens springdata/roart.common.springdata.model=spring.core
		    --add-opens springdata/roart.common.springdata.repository=spring.core
		    --add-opens coredb.spring/roart.db.spring=spring.core
		    --add-opens iclij.core/roart.controller=spring.core
		    --add-opens iclij.common.config/roart.iclij.config=spring.core
		    --add-opens common.config/roart.common.config=spring.core
		    --add-opens db/roart.db.model=org.hibernate.orm.core
		    --add-opens iclij.core/roart.action=spring.core
		    --add-opens java.base/sun.nio.ch=stockstat.shadow.spark
		  </argLine>
		</configuration>
         </plugin>
	 <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
  </dependencies>
  <properties>
    <stockstat.version>0.6-SNAPSHOT</stockstat.version>
    <jdk.version>17</jdk.version>
    <jdk.spark.version>17</jdk.spark.version>
    <mavencompiler.version>3.8.1</mavencompiler.version>
    <maveninstall.version>2.5.2</maveninstall.version>
    <mavenshade.version>3.4.1</mavenshade.version>
    <jetty.version>9.4.12.v20180830</jetty.version>
    <springboot.version>3.1.0</springboot.version>
    <springcloud.version>4.0.2</springcloud.version>
    <springcloudstarter.version>2022.0.3</springcloudstarter.version>
    <springcore.version>6.0.9</springcore.version>
    <eurekaclient.version>2.0.0</eurekaclient.version>
    <jackson.version>2.14.2</jackson.version>
    <hibernate.version>6.1.5.Final</hibernate.version>
    <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
    <hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>
    <ehcache.version>5.6.14.Final</ehcache.version>
    <slf4j.version>1.7.32</slf4j.version>
    <postgresql.version>42.5.0</postgresql.version>
    <junit.version>5.7.2</junit.version>
    <log4j.version>1.2.17</log4j.version>
    <commons.version>2.1.1</commons.version>
    <commons.math3.version>3.6.1</commons.math3.version>
    <commons.lang3.version>3.8.1</commons.lang3.version>
    <commons.codec.version>1.15</commons.codec.version>
    <commons.beanutils.version>1.9.4</commons.beanutils.version>
    <httpclient.version>4.5.6</httpclient.version>
    <jaxb.version>2.3.1</jaxb.version>
    <stanfordcorenlp.version>3.9.1</stanfordcorenlp.version>
    <opennlp.version>1.8.4</opennlp.version>
    <batik.version>1.8</batik.version>
    <jfreesvg.version>3.0</jfreesvg.version>
    <jfreechart.version>1.0.19</jfreechart.version>
    <vaadin.version>7.6.0</vaadin.version>
    <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
    <servlet.version>3.1.0</servlet.version>
    <xmlapis.version>1.4.01</xmlapis.version>
    <spark.version>3.4.0</spark.version>
    <talib.version>0.4.0</talib.version>
    <jenetics.version>5.2.0</jenetics.version>
    <guava.version>16.0.1</guava.version>
    <camel.version>4.0.0-RC1</camel.version>
    <camelactivemq.version>5.16.6</camelactivemq.version>
    <springintegration.version>6.0.0</springintegration.version>
    <springrabbit.version>3.0.0</springrabbit.version>
    <kafka.version>3.5.0</kafka.version> 
    <pulsar.version>3.0.0</pulsar.version>
    <hazelcast.version>3.12.12</hazelcast.version>
    <hazelcastclient.version>3.2.12</hazelcastclient.version>
    <redisclient.version>4.4.3</redisclient.version>
    <zookeeper.version>3.8.2</zookeeper.version>
    <curator.version>5.5.0</curator.version>
    <hadoop.version>3.1.1</hadoop.version>
    <joss.version>0.9.14</joss.version>
    <awssdk.version>2.17.204</awssdk.version>
    <tweety.version>1.20</tweety.version>
    <!-- Spark needs old version -->
    <scala.binary.version>2.13</scala.binary.version>
    <janino.version>3.1.9</janino.version>
    <jakartaservlet.version>4.0.3</jakartaservlet.version>
    <jersey.version>2.36</jersey.version>
    <antlr4.version>4.8</antlr4.version>
  </properties>
  <repositories>
    <repository> 
        <id>repository.spring.milestone</id> 
        <name>Spring Milestone Repository</name> 
        <url>https://repo.spring.io/milestone</url> 
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository> 
        <id>repository.spring.milestone</id> 
        <name>Spring Milestone Repository</name> 
        <url>https://repo.spring.io/milestone</url> 
    </pluginRepository>
  </pluginRepositories>
</project>
